--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@lezer/highlight": "^1.2.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.6",
     "sucrase": "^3.35.1"
   },
